higan/target-higan/program/.err
platform.cpp:1:6: error: ‘Program’ has not been declared
 auto Program::path(uint id) -> string {
      ^~~~~~~
platform.cpp:1:20: error: ‘uint’ was not declared in this scope
 auto Program::path(uint id) -> string {
                    ^~~~
platform.cpp:1:29: error: expected ‘,’ or ‘;’ before ‘->’ token
 auto Program::path(uint id) -> string {
                             ^~
platform.cpp:5:6: error: ‘Program’ has not been declared
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
      ^~~~~~~
platform.cpp:5:20: error: ‘uint’ was not declared in this scope
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
                    ^~~~
platform.cpp:5:29: error: ‘string’ was not declared in this scope
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
                             ^~~~~~
platform.cpp:5:42: error: ‘vfs’ has not been declared
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
                                          ^~~
platform.cpp:5:64: error: expected primary-expression before ‘bool’
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
                                                                ^~~~
platform.cpp:5:77: error: expression list treated as compound expression in initializer [-fpermissive]
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
                                                                             ^
platform.cpp:5:79: error: expected ‘,’ or ‘;’ before ‘->’ token
 auto Program::open(uint id, string name, vfs::file::mode mode, bool required) -> vfs::shared::file {
                                                                               ^~
cc1plus: fatal error: ./: No such file or directory
compilation terminated.
